# LSAP

./: .gitignore  README.md
hw1/: report.md  srm  srm-empty.service  srm-empty.sh  srm-empty.timer  srm-restore  srm-restore.sh  systemd_service_config.md
hw2/: LSAP HW2.md
hw3/: Huffman.cpp  Huffman.h  Makefile  b11705044-compression  main.cpp  test.huf  test.txt
hw4/: LSAP HW4 2a459f80387a800c96feeb270589f57b.md  sites.txt  task1.sh  task2.sh  task3.sh  task4.sh  task5.sh  task7.sh  test.ipynb
hw5/: LSAP HW5 2b859f80387a8022b778f2e9a1068e21.md
hw5/wiki-assistant/: .dockerignore  Dockerfile  Dockerfile-alpine  Dockerfile-ubuntu  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  entrypoint.sh
hw5/wiki-assistant/backend/: Dockerfile-backend  pyproject.toml  server.py
hw5/wiki-assistant/frontend/: Dockerfile-frontend  config.py  pyproject.toml
hw6/: LSAP HW6.md  app.test.js
lab11/: Dockerfile  backend-deployment.yaml  backend-pv.yaml  backend-pvc.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml
lab11/minimal-backend/: Dockerfile
lab11/minimal-frontend/: Dockerfile
